--- a/Lesson5/Samples - Simple_Java_Application_1_2/SimpleJavaApllication1/nbproject/private/private.properties
+++ b/Lesson5/Samples - Simple_Java_Application_1_2/SimpleJavaApllication1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\davidoster\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\paspa\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
